--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <a class="" href="https://www.facebook.com/kyawoo.23" target="_blank">
                     <img class="custom-nav-logo" src="./assets/logo/5305154_fb_facebook_facebook logo_icon.svg" alt="Facebook Logo" />
                 </a>
-                <a class="" href="https://instagram.com/kyawkyawoo23">
+                <a class="" href="https://instagram.com/kyawkyawoo23" target="_blank">
                     <img class="custom-nav-logo" src="./assets/logo/1161954_instagram_icon.svg" alt="Instagram Logo" />
                 </a>
-                <a class="" href="https://www.behance.net/kyawoo3">
+                <a class="" href="https://www.behance.net/kyawoo3" target="_blank">
                     <img class="custom-nav-logo" src="./assets/logo/104426_behance_portfolio_icon.svg" alt="Behance Logo" />
                 </a>
                 <a class="" href="https://dribbble.com/kyawoo23" target="_blank">
@@ -53,16 +53,16 @@
             <a class="left-link left-title d-flex justify-content-center" href="#">
                 KKO
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://www.facebook.com/kyawoo.23">
+            <a class="left-link d-flex justify-content-center" href="https://www.facebook.com/kyawoo.23" target="_blank">
                 <img class="h-75 w-75" src="./assets/logo/5305154_fb_facebook_facebook logo_icon.svg" alt="Facebook Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://instagram.com/kyawkyawoo23">
+            <a class="left-link d-flex justify-content-center" href="https://instagram.com/kyawkyawoo23" target="_blank">
                 <img class="h-75 w-75" src="./assets/logo/1161954_instagram_icon.svg" alt="Instagram Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://www.behance.net/kyawoo3">
+            <a class="left-link d-flex justify-content-center" href="https://www.behance.net/kyawoo3" target="_blank">
                 <img class="h-75 w-75" src="./assets/logo/104426_behance_portfolio_icon.svg" alt="Behance Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://dribbble.com/kyawoo23">
+            <a class="left-link d-flex justify-content-center" href="https://dribbble.com/kyawoo23" target="_blank">
                 <img class="h-75 w-75" src="./assets/logo/5279110_basketball_dribbble_dribbble logo_icon.svg" alt="Dribbble Logo" />
             </a>
             </nav>
