--- a/index.html
+++ b/index.html
@@ -316,32 +316,47 @@
             </div>
 
             <div class="row mx-0 mt-5 projects">
-
+                <h3 class="skill-title mb-3"> - UI/UX Designs</h3>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
                       <img class="modal-content" id="img01">
                       <div id="caption"></div>
                 </div>
 
-                <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/Burmese-Ghouls.webp" alt="Burmese Ghouls Web Design" loading="lazy" onclick="onClick(this);">
+                <div class="project-img col-xs-12 col-sm-6 col-lg-4 gx-0">
+                    <img id="myImg" class="img-fluid" src="./assets/works/Burmese-Ghouls.webp" alt="Burmese Ghouls Web Design" loading="lazy" onclick="onClick(this);"/>
                 </div>
-                <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/Classy-Jerry.webp" alt="Classy Jerry Clothing App Design" loading="lazy" onclick="onClick(this);">
+                <div class="project-img col-xs-12 col-sm-6 col-lg-4 gx-0">
+                    <img id="myImg" class="img-fluid" src="./assets/works/Classy-Jerry.webp" alt="Classy Jerry Clothing App Design" loading="lazy" onclick="onClick(this);"/>
                 </div>
-                <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/YHS.webp" alt="Yangon Hospital Services Design" loading="lazy" onclick="onClick(this);">
+                <div class="project-img col-xs-12 col-sm-6 col-lg-4 gx-0">
+                    <img id="myImg" class="img-fluid" src="./assets/works/YHS.webp" alt="Yangon Hospital Services Design" loading="lazy" onclick="onClick(this);"/>
                 </div>
     
-                <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/JLPT-FlashCard.webp" alt="JLPT FlashCard App Design" loading="lazy" onclick="onClick(this);">
+                <div class="project-img col-xs-12 col-sm-6 col-lg-4 gx-0">
+                    <img id="myImg" class="img-fluid" src="./assets/works/JLPT-FlashCard.webp" alt="JLPT FlashCard App Design" loading="lazy" onclick="onClick(this);"/>
                 </div>
-                <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/My-Portfolio.webp" alt="My Portfolio Design" loading="lazy" onclick="onClick(this);">
+                <div class="project-img col-xs-12 col-sm-6 col-lg-4 gx-0">
+                    <img id="myImg" class="img-fluid" src="./assets/works/My-Portfolio.webp" alt="My Portfolio Design" loading="lazy" onclick="onClick(this);"/>
                 </div>
-                <!-- <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" loading="lazy" class="img-fluid" src="./assets/works/.webp" alt="Daily Design Activity Website" onclick="onClick(this);">
-                </div> -->
+
+                <h3 class="skill-title mb-3"> - Website Projects</h3>
+                <div class="row">
+                    <div 
+                        class="web-pj col-xs-12 col-sm-6" 
+                        onclick="window.open('https://private-message.netlify.app/', '_blank', 'noopener');"
+                    >
+                        <img class="img-fluid" src="./assets/works/private-msg.png" alt="Private Message" loading="lazy"/>
+                        <span>Private Message</span>
+                    </div>
+                    <div 
+                        class="web-pj col-xs-12 col-sm-6" 
+                        onclick="window.open('https://classy-jerry.netlify.app/', '_blank', 'noopener');"
+                    >
+                        <img class="img-fluid" src="./assets/works/classy.png" alt="Classy Jerry" loading="lazy"/>
+                        <span>Classy Jerry</span>
+                    </div>
+                </div>
             </div>
 
         </section>
