--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
                 <div class="row">
                     <div 
                         class="web-pj col-xs-12 col-sm-6" 
-                        onclick="window.open('https://private-message.netlify.app/', '_blank', 'noopener');"
+                        onclick="window.open('https://private-message-by-kko.vercel.app/', '_blank', 'noopener');"
                     >
                         <img class="img-fluid" src="./assets/works/private-msg.png" alt="Private Message" loading="lazy"/>
                         <span>Private Message</span>
                     </div>
                     <div 
                         class="web-pj col-xs-12 col-sm-6" 
-                        onclick="window.open('https://classy-jerry.netlify.app/', '_blank', 'noopener');"
+                        onclick="window.open('https://classy-jerry.vercel.app/', '_blank', 'noopener');"
                     >
                         <img class="img-fluid" src="./assets/works/classy.png" alt="Classy Jerry" loading="lazy"/>
                         <span>Classy Jerry</span>
